--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser-dynamic": "8.2.3",
     "@angular/router": "8.2.3",
     "core-js": "2.6.9",
+    "hammerjs": "^2.0.8",
     "rxjs": "6.5.2",
     "zone.js": "0.9.1"
   },
