--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@angular/compiler": "8.2.3",
     "@angular/core": "8.2.3",
     "@angular/forms": "8.2.3",
-    "@angular/material": "^8.1.3",
+    "@angular/material": "8.1.3",
     "@angular/platform-browser": "8.2.3",
     "@angular/platform-browser-dynamic": "8.2.3",
     "@angular/router": "8.2.3",
     "core-js": "2.6.9",
-    "hammerjs": "^2.0.8",
+    "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "0.9.1"
   },
   "scripts": {
