--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hammerjs": "2.0.8",
     "rxjs": "6.5.2",
     "rxjs-compat": "^6.5.2",
-    "zone.js": "0.9.1"
+    "zone.js": "0.9.1",
+    "@angular/fire/firestone":"^0.0.0"
   },
   "scripts": {
     "ng": "ng",
